# embedded_project

./: .gitignore  CMakeLists.txt  docker-compose.yml  realsense.yaml  realsense_multicam.cpp  realsense_multicam.h
msgs/: CMakeLists.txt  rgb_frame.fbs
nodes/realsense_driver/: CMakeLists.txt  Dockerfile  main.cpp  realsense_driver.cpp
realsense/: realsense.fbs  realsense_multicam.h
